[package]
name = "simd-kernel-lab"
version = "0.0.0"
authors = ["luojia65 <me@luojia.cc>"]
edition = "2018"

[dependencies]
bootloader = "0.3"
volatile = "0.2"
spin = "0.5"

[dependencies.lazy_static]
version = "1.2"
features = ["spin_no_std"]

[profile.dev]
panic = "abort" 

[profile.release]
panic = "abort" 

[package.metadata.bootimage]
default-target = "x86_64-simd_lab_os.json"
